--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tone": "^14.7.77",
     "typescript": "4.9.5"
   },
   "devDependencies": {
