--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "lodash": "^4.17.21",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tone": "^14.7.77",
+    "react-piano": "^3.1.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
