--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "lodash": "^4.17.21",
     "next": "13.2.1",
@@ -26,8 +25,11 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.36.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.35.0",
     "postcss": "^8.4.21",
+    "supabase": "^1.42.0",
     "tailwindcss": "^3.2.7"
   }
 }
