--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "next": "13.2.1",
     "react": "18.2.0",
+    "react-dimensions": "^1.3.1",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-piano": "^3.1.3",
