--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/layout.jsx", "components/Auth.tsx", "components/PianoRecording.jsx", "components/PianoRecording.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/layout.jsx", "components/Auth.tsx", "components/PianoRecording.jsx", "components/PianoRecording.jsx", "components/Dimensions.jsx"],
   "exclude": ["node_modules"]
 }
